--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,10 +4,18 @@ Version: 0.0.0.9000
 Authors@R: 
     person("Benjamin Gregory", "Carlisle", , "murph@bgcarlisle.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-8975-0649"))
-Description: Provides a database of Trial Registration Numbers (TRNs) that have been manually matched with Digital Object Identifiers (DOIs)
+Description: Provides a database of Trial Registration Numbers (TRNs)
+    that have been manually matched with Digital Object Identifiers
+    (DOIs).
 License: AGPL (>=3)
 URL: https://github.com/bgcarlisle/trn2doi
 BugReports: https://github.com/bgcarlisle/trn2doi/issues
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Depends: 
+    R (>= 2.10)
+LazyData: true
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
