--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: trn2doi
+Package: ctlookup
 Title: Matching Trial Registration Numbers (TRNs) to Digital Object Identifiers (DOIs)
 Version: 0.0.0.9000
 Authors@R: 
@@ -8,8 +8,10 @@ Description: Provides a database of Trial Registration Numbers (TRNs)
     that have been manually matched with Digital Object Identifiers
     (DOIs).
 License: AGPL (>=3)
-URL: https://github.com/bgcarlisle/trn2doi
-BugReports: https://github.com/bgcarlisle/trn2doi/issues
+URL: https://github.com/bgcarlisle/ctlookup
+BugReports: https://github.com/bgcarlisle/ctlookup/issues
+Imports:
+    tibble
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
